# buckygen-revival

./: CLAUDE.md  buckygen-revival.cabal
doc/: AUTOMORPHISM-ALGORITHM.md  BFS-CANONICAL.md  BUCKYGEN-ALGORITHM.md  BUCKYGEN-MAP.md  BUCKYPAPER.md  C-CODE-ALGORITHM.md  FOREST.md  FORESTMONAD.md  GENERAL-SPIRAL-ANALYSIS.md  ISOMORPHISM-TEST.md  MAX_STRAIGHT_LENGTHS.md  PERFORMANCE-ANALYSIS.md  PROGRESS.md  RESUME_STATE.md  SEARCHMONAD.md  SPIRAL-ALGORITHM.md  SPIRAL-CHANGES.md  WINDUP-FAIL.md
obsolete/: GenForest.hs
src/: BenchPar.hs  BenchSearch.hs  Canonical.hs  DemoForest.hs  Expansion.hs  GenForest.hs  GenTestData60.hs  Generate.hs  MutGraph.hs  Search.hs  Seeds.hs  Spiral.hs  TestCanonical.hs  TestExpansion.hs  TestGraphs60.hs  Windup.hs
