cabal-version:   3.0
name:            buckygen-revival
version:         0.1.0.0
synopsis:        Fullerene isomer generator (Haskell reimplementation of buckygen)
license:         BSD-3-Clause

common shared
  default-language: GHC2021
  ghc-options:      -Wall -Wno-unused-imports -Wno-name-shadowing
  build-depends:
    , base        >= 4.18 && < 5
    , array       >= 0.5
    , containers  >= 0.6
    , deepseq     >= 1.4
    , parallel    >= 3.2
    , stm         >= 2.5
    , vector      >= 0.13

library
  import:         shared
  hs-source-dirs: src
  exposed-modules:
    Seeds
    Expansion
    Canonical
    Spiral
    MutGraph
    GenForest

executable buckygen-test
  import:         shared
  hs-source-dirs: src
  main-is:        TestCanonical.hs
  other-modules:  Seeds, Expansion, Canonical, Spiral, MutGraph, GenForest
  ghc-options:    -O2 -threaded -rtsopts

executable buckygen-par
  import:         shared
  hs-source-dirs: src
  main-is:        BenchPar.hs
  other-modules:  Seeds, Expansion, Canonical, MutGraph, GenForest
  ghc-options:    -O2 -threaded -rtsopts

executable buckygen-generate
  import:         shared
  hs-source-dirs: src
  main-is:        Generate.hs
  other-modules:  Seeds, Expansion, Spiral
  ghc-options:    -O2 -rtsopts

executable buckygen-demo
  import:         shared
  hs-source-dirs: src
  main-is:        DemoForest.hs
  other-modules:  Seeds, Expansion, Canonical, MutGraph, GenForest
  ghc-options:    -O2 -threaded -rtsopts

executable buckygen-test-expansion
  import:         shared
  hs-source-dirs: src
  main-is:        TestExpansion.hs
  other-modules:  Seeds, Expansion
  ghc-options:    -O2 -rtsopts
